T50/T51: move executor image to Python 3.12 + generalize pyexecutor for Spark 3.4+
T50 (pyexecutor): code_executor.py is already SparkSession-based (Spark 3.x); the
version gate accepted only "3." -> broadened to "3."/"4." so the executor
generalizes across Spark 3.4+ and a future 4.0.

T51 (executor image, deployment/spark-docker):
- Dockerfile: Miniconda py37_4.9.2 (Python 3.7) -> py312 (Python 3.12);
  openjdk-11-jre -> openjdk-17-jre; JDK_JAVA_OPTIONS expanded to Spark 3.4's full
  JDK-17 --add-opens set so spark-submit/executors run on the 17 runtime.
- requirements.txt modernized for cp312: dropped the Python-3.7-era pins that have
  no cp312 wheels (tornado 4.1, ipython 5.1, ipykernel 4.5, jupyter-client 4.4,
  jupyter-core 4.2, pyzmq 17, urllib3 1.22, python-dateutil 2.7.2, pytz 2018.3,
  traitlets 4.3.2, wcwidth 0.1.7, ipython-genutils); numpy<2 and
  pandas>=1.5,<2.2 (pyspark 3.4's Arrow bridge isn't validated against numpy 2 /
  pandas 3); pyarrow 1.0.1 -> 15.0.2; SQLAlchemy 1.4.45 -> 1.4.54; lightgbm
  3.3.5 -> 4.3.0 (3.3.5 has no cp312 wheel and its source build uses the removed
  distutils; 4.x reads 3.x models, train/predict API unchanged). pyspark itself
  continues to come from the Spark 3.4.4 tarball ($SPARK_HOME/python).

Verified: pip resolves and installs the full requirement set on Python 3.12
(all cp312 wheels) via a throwaway build. NOTE: Spark 3.5 is the first release to
officially list Python 3.12; on 3.4.4 it is unofficial-but-working.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>